--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "contacts",
     "slug": "contactApp",
     "privacy": "public",
+    "sdkVersion": "41.0.0",
     "platforms": [
       "ios",
       "android",
@@ -10,7 +11,7 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/th.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -24,6 +25,9 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "package": "com.narutoobito.contactsApp"
     }
   }
 }
